--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,8 @@ body {
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 /* TOAST */
